k8s/wshoto/istio/no-injection-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wshoto-gateway
  namespace: no-injection
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - demo.wshoto.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
      - demo.wshoto.com
    tls:
      credentialName: demo-ssl-secret
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wshoto
  namespace: no-injection
spec:
  hosts:
  - "*"
  gateways:
  - wshoto-gateway
  http:
  - match:
    - uri:
        prefix: /no-injection/user
    rewrite:
      uri: /user
    route:
    - destination:
        host: wshoto-demo-user
        port:
          number: 7371
